<resources>
    <string name="app_name">Forge</string>

    <string name="notification_service">Forge Helper</string>
    <string name="forge_autofill_service">Forge Autofill Helper</string>

    <string name="email_set_message">Email set to %s</string>

    <string name="title_activity_forge">Forge</string>
    <string name="action_settings">Settings</string>
    <string name="account_name">Account Name</string>
    <string name="firstname">Firstname</string>
    <string name="middlename">Middlename</string>
    <string name="lastname">Lastname</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="date">Date</string>
    <string name="tab_generate">Generate</string>
    <string name="tab_store">Store</string>
    <string name="copy_to_clip">copied to clipboard</string>
    <string name="dialog_action_dismiss">OK</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>

    <string name="save">Save</string>
    <string name="refresh">Refresh</string>
    <string name="more_fields">More</string>
    <string name="less_fields">Less</string>

    <string name="shared_prefs">forge_account</string>
    <string name="shared_pref_current">forge_current_account</string>

    <string name="notification_channel_name">Forge</string>
    <string name="notification_channel">forge_channel</string>

    <string name="helper_notification_title">Load Forge</string>
    <string name="helper_notification_text">Tap to load Forge</string>
    <string name="helper_notification_generate">Generate</string>
    <string name="helper_notification_store">Store</string>
    <string name="helper_notification_overlay">Overlay</string>

    <string name="network_connecting">Connecting</string>
    <string name="network_unavailable">No network connection</string>
    <string name="reload">Reload</string>

    <string name="dialog_overwrite">Overwrite the account or save as new?</string>
    <string name="option_overwrite">Overwrite</string>
    <string name="option_save_new">Save New</string>
    <string name="option_cancel">Cancel</string>

    <string name="default_mail_domain">\@guerrillamailblock.com</string>

    <string name="dialog_delete">Delete the account?</string>
    <string name="option_delete">Delete</string>

    <string name="message_account_saved">Account Saved</string>
    <string name="message_account_loaded">Account Loaded</string>
    <string name="message_account_deleted">Account Deleted</string>

    <string name="filename_forge_accounts">forge_accounts.json</string>

    <string name="title_activity_preferences">Preferences</string>

    <string name="pref_header_general">General</string>
    <string name="pref_header_firstname">Firstname</string>
    <string name="pref_header_middlename">Middlename</string>
    <string name="pref_header_lastname">Lastname</string>
    <string name="pref_header_username">Username</string>
    <string name="pref_header_email">Email</string>
    <string name="pref_header_password">Password</string>
    <string name="pref_header_date_of_birth">Date of Birth</string>

    <string name="invalid_preference">Invalid preference</string>
    <string name="error_value_required">Value required</string>

    <string name="error_must_be_numeric">Value must be numeric</string>

    <string name="error_identifer_too_long">Use 74 characters or less for email</string>

    <string name="error_age_too_high">Age must be less than\u0020</string>
    <string name="error_age_too_low">Age must be greater than\u0020</string>
    <string name="error_min_age_greater_max">Minimum age must be less than maximum age</string>

    <string name="error_pass_long">Password length must be less than\u0020</string>
    <string name="error_pass_short">Password length must be greater than\u0020</string>
    <string name="error_min_pass_greater_max">Minimum password length must be less than maximum password length</string>

    <string name="accessibility_not_enabled">Accessibility service permission required</string>
    <string name="error_accessibility_not_enabled">Allow Forge to run an accessibility service to use the autofill service</string>

    <string name="draw_overlay_not_enabled">Draw over other apps permission required</string>
    <string name="error_draw_overlay_not_enabled">Allow Forge to draw over other apps to use the helper</string>

    <string name="helper_not_enabled">Helper notification not enabled</string>
    <string name="error_helper_not_enabled">Enable the helper notification to allow the overlay to be summoned</string>

    <string name="tutorial_global_refresh_title">Account Refresh</string>
    <string name="tutorial_global_refresh_text">Press this to generate a completely new identity</string>

    <string name="tutorial_local_refresh_title">Property Refresh</string>
    <string name="tutorial_local_refresh_text">Press this to regenerate this individual property</string>

    <string name="tutorial_copy_title">Copy</string>
    <string name="tutorial_copy_text">Press this to copy this property to your clipboard</string>

    <string name="tutorial_local_preferences_title">Property Preferences</string>
    <string name="tutorial_local_preferences_text">Press this to open this property\'s preferences</string>

    <string name="tutorial_inbox_title">Guerrilla Mail Inbox</string>
    <string name="tutorial_inbox_text">This is where any emails sent to the generated email are displayed, tap on the email to view it</string>

    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>


</resources>
