<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:theme="@style/AppTheme">

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <view
            android:id="@+id/space_right"
            class="android.support.v4.widget.Space"
            id="@+id/view"
            layout_weight=".80"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.8"
            android:background="@android:color/background_light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="?android:attr/editTextColor"/>

                <LinearLayout
                    style="@style/ForgeItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/firstname_wrapper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6">

                        <EditText
                            android:id="@+id/firstname"
                            style="@style/ForgeNonEditable"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:ems="10"
                            android:hint="@string/firstname"
                            android:maxLines="1"
                            />
                    </android.support.design.widget.TextInputLayout>


                    <ImageButton
                        android:id="@+id/copy_firstname"
                        style="@style/ForgeButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/icon_copy"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/ForgeItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/linearLayout"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/middlename_wrapper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6">

                        <EditText
                            android:id="@+id/middlename"
                            style="@style/ForgeNonEditable"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/middlename"
                            android:maxLines="1"/>
                    </android.support.design.widget.TextInputLayout>

                    <ImageButton
                        android:id="@+id/copy_middlename"
                        style="@style/ForgeButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/icon_copy"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/ForgeItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/lastname_wrapper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6">

                        <EditText
                            android:id="@+id/lastname"
                            style="@style/ForgeNonEditable"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/lastname"
                            android:maxLines="1"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <ImageButton
                        android:id="@+id/copy_lastname"
                        style="@style/ForgeButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/icon_copy"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/ForgeItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/card_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/username_wrapper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6">

                        <EditText
                            android:id="@+id/username"
                            style="@style/ForgeNonEditable"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/username"
                            android:maxLines="1"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <ImageButton
                        android:id="@+id/copy_username"
                        style="@style/ForgeButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/icon_copy"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/ForgeItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/password_wrapper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6">

                        <EditText
                            android:id="@+id/password"
                            style="@style/ForgeNonEditable"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/password"
                            android:maxLines="1"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <ImageButton
                        android:id="@+id/copy_password"
                        style="@style/ForgeButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/icon_copy"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/ForgeItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ProgressBar
                        android:id="@+id/address_progress"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:visibility="gone"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/email_wrapper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:visibility="visible">

                        <EditText
                            android:id="@+id/email"
                            style="@style/ForgeNonEditable"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/email"
                            android:maxLines="1"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <ImageButton
                        android:id="@+id/copy_email"
                        style="@style/ForgeButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/icon_copy"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/ForgeItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/linearLayout"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/year_wrapper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        >

                        <EditText
                            android:id="@+id/year"
                            style="@style/ForgeNonEditable"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:maxLines="1"
                            android:textAlignment="textStart"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/month_wrapper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        >

                        <EditText
                            android:id="@+id/month"
                            style="@style/ForgeNonEditable"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:maxLines="1"
                            android:textAlignment="textStart"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/day_wrapper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        >

                        <EditText
                            android:id="@+id/day"
                            style="@style/ForgeNonEditable"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:maxLines="1"
                            android:textAlignment="textStart"/>
                    </android.support.design.widget.TextInputLayout>

                    <ImageButton
                        android:id="@+id/copy_date"
                        style="@style/ForgeButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/icon_copy"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/ForgeItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/card_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_save"
                        style="@style/ForgeButtonWithText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Save"/>

                    <Button
                        android:id="@+id/button_generate"
                        style="@style/ForgeButtonWithText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Generate"/>

                    <Button
                        android:id="@+id/button_dismiss"
                        style="@style/ForgeButtonWithText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@android:string/ok"/>

                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <view
            android:id="@+id/space_left"
            class="android.support.v4.widget.Space"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"/>

    </LinearLayout>

</FrameLayout>